5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1621_2934.log
== TEST (2019-04-01 19:41:36) 
-- CODE:
from math import*

qo=float(input("valor inicial: "))
r=float(input("taxa de rendimento: "))
#qf= valor final , r= taxa anual , y= anos necessario
y=(ln(qf)-ln(qo))/r
print(y*3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y=(ln(qf)-ln(qo))/r
NameError: name 'ln' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:41:44) 
-- CODE:
from math import*

qo=float(input("valor inicial: "))
r=float(input("taxa de rendimento: "))
#qf= valor final , r= taxa anual , y= anos necessario
y=(ln(qf)-ln(qo))/r
print(123y*3)
-- ERROR:
File "XXXX", line 7
    print(123y*3)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:41:49) 
-- CODE:
from math import*

qo=float(input("valor inicial: "))
r=float(input("taxa de rendimento: "))
#qf= valor final , r= taxa anual , y= anos necessario
y=(ln(qf)-ln(qo))/r
print(y*3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y=(ln(qf)-ln(qo))/r
NameError: name 'ln' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:42:54) 
-- CODE:
from math import*

qo=float(input("valor inicial: "))
r=float(input("taxa de rendimento: "))
#qf= valor final , r= taxa anual , y= anos necessario
y=(ln(qf)-ln(qo))/r
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y=(ln(qf)-ln(qo))/r
NameError: name 'ln' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:47:44) 
-- CODE:
from math import*

qo=float(input("valor inicial: "))
r=float(input("taxa de rendimento: "))
#qf= valor final , r= taxa anual , y= anos necessario
y=(ln(qf)-ln(qo))/r
print(y//10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y=(ln(qf)-ln(qo))/r
NameError: name 'ln' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:52:40) 
-- CODE:
from math import*

qo=float(input("valor inicial: "))
r=float(input("taxa de rendimento: "))
#qf= valor final , r= taxa anual , y= anos necessario
y=(ln(qf)-ln(qo))/r
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y=(ln(qf)-ln(qo))/r
NameError: name 'ln' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:53:00) 
-- CODE:
from math import*

qo=float(input("valor inicial: "))
r=float(input("taxa de rendimento: "))
#qf= valor final , r= taxa anual , y= anos necessario
y=(ln(qf)-ln(qo))/r
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y=(ln(qf)-ln(qo))/r
NameError: name 'ln' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 07:05:11) 
-- CODE:
from math import*

qo=float(input("valor inicial: "))
r=float(input("taxa de rendimento: "))
#qf= valor final , r= taxa anual , y= anos necessario
y=(ln(qf)-ln(qo))/r
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y=(ln(qf)-ln(qo))/r
NameError: name 'ln' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
